# cmd/server/router.go
@@ -72,20 +72,20 @@ func (rtr router) public(r chi.Router) {
 func (rtr router) apiV1(r chi.Router) {
 	r.Route("/api/v1", func(r chi.Router) {
 		r.Route("/auth", func(r chi.Router) {
-			r.Post("/login", rtr.authHandler.Login)
-			r.Post("/register", rtr.authHandler.Register)
-			r.Get("/google/login", rtr.authHandler.GoogleLogin)
-			r.Get("/google/callback", rtr.authHandler.GoogleCallback)
+			r.Post("/login", rtr.authHandler.Login())
+			r.Post("/register", rtr.authHandler.Register())
+			r.Get("/google/login", rtr.authHandler.GoogleLogin())
+			r.Get("/google/callback", rtr.authHandler.GoogleCallback())
 		})
 
 		r.Group(func(r chi.Router) {
 			r.Use(appMiddleware.RequireAuth)
 			r.Route("/users", func(r chi.Router) {
-				r.Post("/", rtr.usersHandler.CreateUser)
-				r.Get("/", rtr.usersHandler.ListUsers)
-				r.Get("/{id}", rtr.usersHandler.GetUser)
-				r.Put("/{id}", rtr.usersHandler.UpdateUser)
-				r.Delete("/{id}", rtr.usersHandler.DeleteUser)
+				r.Post("/", rtr.usersHandler.CreateUser())
+				r.Get("/", rtr.usersHandler.ListUsers())
+				r.Get("/{id}", rtr.usersHandler.GetUser())
+				r.Put("/{id}", rtr.usersHandler.UpdateUser())
+				r.Delete("/{id}", rtr.usersHandler.DeleteUser())
 			})
 		})
 	})
